<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="contacts">Contacts</string>
    <string name="addNew">Add New</string>
    <string name="skip">Skip</string>
    <string name="sync">Sync</string>
    <string name="syncWith">Sync with</string>
    <string name="viewList">View List</string>
    <string name="interactions">Interactions</string>
    <string name="followUps">Follow Ups</string>
    <string name="welcomeText">\nWelcome to proLog</string>
    <string name="recommendText">We recommend you bring in your contacts</string>
    <string name="viewGroups">View Groups</string>
    <string name="groupName">Group Name</string>
    <string name="app_name">proLog</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#808080</color>

    <string name="OK">OK</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="action_settings">Settings</string>
    <string name="type_contact">Type in a contact information</string>
    <string name="take_photo_bcard">Take a photo of the business card</string>
    <string name="select_photo_bcard">Select from existing business card photos</string>
    <string name="title_activity_sync_loading">SyncLoadingActivity</string>
    <string name="please_wait">Please wait while we sync your contacts</string>
    <string name="title_activity_contact_view">ContactViewActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="fname">Name</string>
    <string name="lname">Last Name</string>
    <string name="Title">Title</string>
    <string name="Company">Company</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="title_activity_contact_interactions">ContactInteractionsActivity</string>
    <string name="add_an_interaction">Add an interaction</string>
        <string name="add_new__interaction">Add new interaction</string>
    
    <string name="add">Add</string>
    <string name="title_activity_my_tab">MyTabActivity</string>
    <string name="title_activity_gg">GGActivity</string>
    <string name="tab_label_1">Information</string>
    <string name="tab_label_2">Interactions</string>
    <string name="tab_label_3">Follow Ups</string>
    <string name="title_activity_add_new_contact">AddNewContactActivity</string>
    <string name="title_activity_new_interacion">NewInteracionActivity</string>
    <string name="Date">Date</string>
    <string name="Follow_up">Follow Up</string>
    <string name="note">Notes</string>
    <string name="addNote">Add notes about Interaction</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="pick_date">Pick date</string>
    <string name="title_activity_new_follow_up">New Follow Up</string>
    <string name="newfollowup">New Follow Up</string>
    <string name="oneday">One day</string>
    <string name="oneweek">One Week</string>
    <string name="onemonth">One Month</string>
    <string name="addfollow">Add notes about follow up</string>
    <string name="Field">Add field</string>
    <string name="FieldName">FieldName</string>
    <string name="FieldNameNew">Field Name</string>
    <string name="FieldValue">Field Value</string>
    <string name="ExampleFieldName">E.g. Office phone</string>
    <string name="ExampleFieldValue">E.g. xxx-xxx-xxxx</string>
    <string name="type">type</string>
    <string name="location">Location</string>
    <string name="event">Event</string>
    <string name="otherparticipants">Other participants</string>
    <string name="select">Select</string>
    
</resources>