<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewInteracionActivity" >


<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/newFollowUpActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newfollowup"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Title"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/newFollowUpActivityTextViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="@color/white" />

    </TableRow>

    <LinearLayout >
    
        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/Date"
            android:inputType="date"
            android:width="@dimen/hundredten" />

    
    
</LinearLayout>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    </TableRow>


<TableRow>
   <RadioGroup android:id="@+id/radioGroup">
        <RadioButton
            android:id="@+id/radioButtonDay"
            android:text="@string/oneday"
            android:textColor="@color/white"
           	/>
        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:text="@string/oneweek"
            android:textColor="@color/white"
           	/>
         <RadioButton
            android:id="@+id/radioButtonMonth"  
            android:text="@string/onemonth"
            android:textColor="@color/white"
            
           />
</RadioGroup>
</TableRow>
    

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

    </TableRow>

        <EditText
            android:id="@+id/editTextNotes"
            style="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/addfollow"
            android:inputType="textMultiLine"
            android:minHeight="70dp"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:layout_marginTop="@dimen/fivedp"
            android:text="@string/save"
            android:textColor="@color/white" />
        
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:layout_marginTop="@dimen/fivedp"
            android:text="@string/Cancel"
            android:textColor="@color/white" />

</TableLayout>
</RelativeLayout>