<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <GridLayout
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5" >
    </GridLayout>

    <TextView
        android:id="@+id/textFieldName"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:text="@string/FieldNameNew"
        android:textSize="@dimen/twentydp" />

    <EditText
        android:id="@+id/editNewField"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/ExampleFieldName"
        android:inputType="text"
        android:textSize="@dimen/tendp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/FieldValue"
        android:textSize="@dimen/twentydp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="210dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="2"
        android:ems="10"
        android:hint="@string/ExampleFieldValue"
        android:inputType="text"
        android:textSize="@dimen/tendp" />

</GridLayout>