<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:layout_gravity="center"
    android:orientation="vertical"
     >

    <TextView
        
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groupName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minWidth="120dp" 
        
        
        />



        <Button
            android:id="@+id/activityAddNewGroupSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        
            android:minWidth="@dimen/eightydp"
            android:text="@string/save"
       
             />

        <Button
            android:id="@+id/activityAddNewGroupCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       
            android:text="@string/Cancel" />
 

</LinearLayout>